refine resume page

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,7 +16,7 @@ website:
       - text: "Home"
         href: index.qmd
       - text: "Resume"
-        href: resume.qmd
+        href: resume.html
       - text: "Recent Work"
         menu:
           - text: "Some Recent Work"
